--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,17 +4,17 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/ic_app_icon_foreground"
+        android:label="FoodHub"
+        android:roundIcon="@drawable/ic_app_icon_foreground"
         android:supportsRtl="true"
         android:theme="@style/Theme.ActivityLifecycle">
-        <activity android:name=".ForgotPasswordDetailsActivity"></activity>
-        <activity android:name=".ForgotPasswordActivity" />
-        <activity android:name=".RegistrationInfoActivity" />
-        <activity android:name=".RegistrationActivity" />
+        <activity android:name=".activities.ForgotPasswordDetailsActivity"></activity>
+        <activity android:name=".activities.ForgotPasswordActivity" />
+        <activity android:name=".activities.RegistrationInfoActivity" />
+        <activity android:name=".activities.RegistrationActivity" />
         <activity
-            android:name=".SplashActivity"
+            android:name=".activities.SplashActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,8 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".activities.MainActivity" />
     </application>
 
 </manifest>
