--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.internshala.activitylifecycle">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_app_icon_foreground"
         android:label="FoodHub"
         android:roundIcon="@drawable/ic_app_icon_foreground"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true"
+        android:resizeableActivity="false"
         android:supportsRtl="true"
         android:theme="@style/Theme.ActivityLifecycle">
         <activity android:name=".activities.ForgotPasswordDetailsActivity"></activity>
